Fix image size + more album-mode outlie

--- a/next/content/blog/album-mode.mdx
+++ b/next/content/blog/album-mode.mdx
@@ -8,8 +8,23 @@ date: 2022-05-28T04:00
 # Outline
 
 * I listen to way too much music
+  * My favorite thing to do it listen to a full album. There isn't a better way to experience an artist's vision than
+    that.
 * Spotify used to be a good way for me to find things, has failed me in recent years.
   * It doesn't understand that I want music unlike what I've listened to. I need new things!
+  * I wrecked it's recommendations with the amount of ambient music I've listened to while falling asleep over the
+    years.
+* I find music from Pitchfork and other publications
+* I suffer from decision paralysis
+  * Shout out @neilzo's lunch roulette thing from years ago
+* [album-mode.party](https://album-mode.party)
+  * I needed an app where I can push buttons and get an album to listen to
+  * It started with searching by label and being able to get a random album from Pitchfork reviews
+    * I ended up scraping minmal amounts of data on reviews into a sqlite database that I ship with the code
+  * Had a "no, duh" moment about 2 weeks in about being able to search via genre and artist
+    * Genre in Spotify is super interesting. They don't list it anywhere and I had to pull it from this random Spotify
+      research site who's purpose I really don't understand, someone please explain it to me!
+      * https://everynoise.com/everynoise1d.cgi?scope=all
 * Remix
   * My new job at Chord is developer tooling on headless applications
   * This app gave me an excuse to pick up Remix
@@ -17,3 +32,4 @@ date: 2022-05-28T04:00
     * Your layout code is right beneath your data code
     * File organization is like a refined first PHP project
     * Hosting was somehow simpler than FTPing PHP files, even though there is a build step!
+    * Really nice integration with Netlify
