--- a/next/content/blog/album-mode.mdx
+++ b/next/content/blog/album-mode.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introducing Album Mode.party
 description: I made an application to feed my music discovery addiction
-slug: introducing-album-mode.party
+slug: album-mode.party
 date: 2022-05-28T04:00
 ---
 
@@ -33,8 +33,11 @@ date: 2022-05-28T04:00
 
 # What?
 
+Elevator pitch time!
+
 I built an application that recommends me a random album to listen to. Since launching [album-mode.party][app], I have
-discovered so many new albums that I wouldn't have otherwise heard.
+discovered so many new albums that I wouldn't have otherwise heard. It's UI has buttons and inputs that I can press to
+get new music very quickly.
 
 # Why?
 
@@ -60,9 +63,76 @@ I needed to do something about this.
 
 # How?
 
+What I needed to make was an application that would recommend me a single album at a time and I could thumbs up or down
+it to get the next album. I'm prone to decision paralysis, so presenting me binary choices with no consequences is an
+important feature. To do this, I reflected on the two main patterns that I discover new music:
+
+1. Spotify's recommendation engine
+2. Highly rated albums from publications like [Pitchfork][p4k], [Bandcamp Daily][bandcamp.daily] and more
+
+With a little bit of programming, I was able to make this a reality.
+
+## Spotify Search
+
+The initial feature I had in mind to find music on Spotify was to be able to get a random album by searching by music
+label. See, I listen to a lot of emo albums and I was able find a lot of new music by searching by `label:"count your
+lucky stars"`. So I went ahead a wired up this type of searching and started finding music.
+
+I quickly ran into the limitations of this. It's great for searching for smaller labels with a focus on genre, but most
+music worth listening to comes from major labels like Columbia or UMG. _You can_ search those labels, but you're going
+to get a hodge podge of random albums.
+
+I shared the app with some friends at that point and they were all like "...cool" and then I realized that few people
+know labels! It's far easier to search by genres or artists!
+
+### Spotify Genres
+
+Searching Spotify by genre is weird! Rather than being flexible with genre names and doing a nearest neighbor, like they
+do when you search by artist, they have a fixed list of genres. Even more unhelpfully, they don't provide a neat API
+endpoint to pull all the genres (from what I can tell, could be wrong here). If you attempt to hit that API with a term
+like "country and western", it will throw an error, so you must search by their defined genres.
+
+Luckily, [Glenn McDonald](https://furia.com/) created a site called [Every Noise at Once][every-noise] that has a
+[neat list of all 5889 genres that Spotify supports][every-noise.genres]. I was able to scrape that list, toss them in the
+database and make the genre search input into an autocomplete dropdown pre-seeded with the top 100 to pick from.
+
+> Glenn, if you ever read this, I would love to talk to you about Every Noise at Once. Clicking around in it produces
+> some really interesting results, but I'm completely unclear what it's purpose is, especially to you.
+
+### Related Spotify Artists
+
+The cool thing about Spotify's web API is that any functionality you see in the application is powered by a publically
+available API.
+
+## Publications
+
+I decided the easiest way to get random recommendations from publications would be to scrape review sites that I liked
+and shove minimal amounts of data to pull the album from Spotify into a sqlite database.
+
+It is super important to me honor the hard work these publications put into their reviews. As such, where possible,
+I try to link to the original reviews when presenting the album.
+
+<figure>
+  ![Screenshot of Album Mode.party recommending Visitor by The Dodos with a link to the Pitchfork review](/img/album-mode/p4k-preview.png)
+  <figcaption>Note the link to the Pitchfork review</figcaption>
+</figure>
+
+
+In the case of reviews from [Bandcamp Daily][bandcamp.daily], I went out of my way to embed the album on Bandcamp so
+that the artist has a chance of getting a purchase from the app's recommendation.
+
+<figure>
+  ![Screenshot of Album Mode.party recommending a Camp Cope album with a Bandcamp embed](/img/album-mode/bandcamp-preview.png)
+  <figcaption>Note the link to the Bandcamp Daily review and the specialized Bandcamp embed</figcaption>
+</figure>
+
 ## Stack
 
 ### Remix
+
+My new job has me working and thinking a lot about Jamstack frameworks and I was itching for an opportunity to play
+around with [Remix][remix.run]. It's the new hotness in the React world and has some very novel concepts that end up
+being perfect for [Album Mode.party][app].
 
 * My new job at Chord is developer tooling on headless applications
 * This app gave me an excuse to pick up Remix
@@ -105,3 +175,9 @@ I needed to do something about this.
 [app]: https://album-mode.party
 [last.fm]: https://last.fm/user/eli_pwnd
 [p4k]: https://pitchfork.com
+[chord]: https://chord.co
+[remix.run]: https://remix.run/
+[spotify-search]: https://developer.spotify.com/documentation/web-api/reference/#/operations/search
+[bandcamp.daily]: https://daily.bandcamp.com/album-of-the-day
+[every-noise]: https://everynoise.com/
+[every-noise.genres]: https://everynoise.com/everynoise1d.cgi?scope=all&vector=popularity
