Tweets are working now

--- a/astro/src/pages/blog/2021-website-redesign.mdx
+++ b/astro/src/pages/blog/2021-website-redesign.mdx
@@ -7,6 +7,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+import { Tweet } from '@astro-community/astro-embed-twitter'
 
 ![Home page screenshot](/img/website-update/home-page.png)
 
