--- a/astro/src/pages/blog/hosting-gatsby-on-digitalocean-spaces.mdx
+++ b/astro/src/pages/blog/hosting-gatsby-on-digitalocean-spaces.mdx
@@ -8,6 +8,8 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+import { Tweet } from '@astro-community/astro-embed-twitter'
+
 ![Hosting Gatsby on DigitalOcean Spaces will make you grimmace](/img/gatsby-digitialocean-spaces/grimace-cover.png)
 
 [DigitalOcean Spaces](https://www.digitalocean.com/products/spaces/) is an object storage service that is S3 compatible (you can use all the AWS S3
@@ -231,9 +233,7 @@ colors this connection waterfall is (the time scale is roughly the same as the w
 
 Also, how can you not enjoy their developer content!?
 
-<Tweet id="1362440545604415493">
-    <blockquote><p lang="en" dir="ltr">Deploy serverless functions with a simple push ✨ <a href="https://t.co/p4k08cv4Q1">pic.twitter.com/p4k08cv4Q1</a></p>&mdash; Netlify (@Netlify) <a href="https://twitter.com/Netlify/status/1362440545604415493?ref_src=twsrc%5Etfw">February 18, 2021</a></blockquote>
-</Tweet>
+<Tweet id="1362440545604415493" />
 
 # Conclusion
 
