--- a/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
+++ b/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+import { YouTube } from '@astro-community/astro-embed-youtube'
 
 <StreamingAlbum
   name="Just Married"
